--- a/recover.html
+++ b/recover.html
@@ -7,7 +7,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Recovering of the Database &mdash; Webarchiv 1.0 documentation</title>
+    <title>Recovering of the Database &mdash; Webarchive 1.0 documentation</title>
     
     <link rel="stylesheet" href="_static/nature.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -24,7 +24,7 @@
     <script type="text/javascript" src="_static/jquery.js"></script>
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
-    <link rel="top" title="Webarchiv 1.0 documentation" href="index.html" />
+    <link rel="top" title="Webarchive 1.0 documentation" href="index.html" />
     <link rel="next" title="Git-Handling" href="git.html" />
     <link rel="prev" title="Synchronisation between Temp and Archive" href="rsync.html" /> 
   </head>
@@ -44,7 +44,7 @@
         <li class="right" >
           <a href="rsync.html" title="Synchronisation between Temp and Archive"
              accesskey="P">previous</a> |</li>
-        <li><a href="index.html">Webarchiv 1.0 documentation</a> &raquo;</li> 
+        <li><a href="index.html">Webarchive 1.0 documentation</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -273,11 +273,11 @@ is written to <tt class="docutils literal"><span class="pre">/archive-root/pickl
         <li class="right" >
           <a href="rsync.html" title="Synchronisation between Temp and Archive"
              >previous</a> |</li>
-        <li><a href="index.html">Webarchiv 1.0 documentation</a> &raquo;</li> 
+        <li><a href="index.html">Webarchive 1.0 documentation</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
-        &copy; Copyright 2012, Christopher Pahl, Christoph Piechula.
+        &copy; Copyright 2012, Christopher Pahl, Christoph Piechula, Florian Bauer.
       Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.1.3.
     </div>
   </body>
