--- a/_modules/index.html
+++ b/_modules/index.html
@@ -7,7 +7,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Overview: module code &mdash; Webarchiv 1.0 documentation</title>
+    <title>Overview: module code &mdash; Webarchive 1.0 documentation</title>
     
     <link rel="stylesheet" href="../_static/nature.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
@@ -24,7 +24,7 @@
     <script type="text/javascript" src="../_static/jquery.js"></script>
     <script type="text/javascript" src="../_static/underscore.js"></script>
     <script type="text/javascript" src="../_static/doctools.js"></script>
-    <link rel="top" title="Webarchiv 1.0 documentation" href="../index.html" /> 
+    <link rel="top" title="Webarchive 1.0 documentation" href="../index.html" /> 
   </head>
   <body>
     <div class="related">
@@ -36,7 +36,7 @@
         <li class="right" >
           <a href="../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li><a href="../index.html">Webarchiv 1.0 documentation</a> &raquo;</li> 
+        <li><a href="../index.html">Webarchive 1.0 documentation</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -50,7 +50,6 @@
 <li><a href="archive/cmanager/crawlmanager.html">archive.cmanager.crawlmanager</a></li>
 <li><a href="archive/cmanager/intervalmanager.html">archive.cmanager.intervalmanager</a></li>
 <li><a href="archive/config/handler.html">archive.config.handler</a></li>
-<li><a href="archive/config/reader.html">archive.config.reader</a></li>
 <li><a href="archive/crawler/cleaner.html">archive.crawler.cleaner</a></li>
 <li><a href="archive/crawler/crawljob.html">archive.crawler.crawljob</a></li>
 <li><a href="archive/crawler/dbgen.html">archive.crawler.dbgen</a></li>
@@ -66,6 +65,7 @@
 <li><a href="archive/dbrecover/repair.html">archive.dbrecover.repair</a></li>
 <li><a href="archive/dbrecover/xml_recover.html">archive.dbrecover.xml_recover</a></li>
 <li><a href="archive/javadapter/server.html">archive.javadapter.server</a></li>
+<li><a href="archive/logger/loghandler.html">archive.logger.loghandler</a></li>
 <li><a href="archive/util/filelock.html">archive.util.filelock</a></li>
 <li><a href="archive/util/files.html">archive.util.files</a></li>
 <li><a href="archive/util/paths.html">archive.util.paths</a></li>
@@ -103,11 +103,11 @@
         <li class="right" >
           <a href="../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li><a href="../index.html">Webarchiv 1.0 documentation</a> &raquo;</li> 
+        <li><a href="../index.html">Webarchive 1.0 documentation</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
-        &copy; Copyright 2012, Christopher Pahl, Christoph Piechula.
+        &copy; Copyright 2012, Christopher Pahl, Christoph Piechula, Florian Bauer.
       Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.1.3.
     </div>
   </body>
