--- a/extractor.html
+++ b/extractor.html
@@ -7,7 +7,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Extracting data from crawled content &mdash; Webarchiv 1.0 documentation</title>
+    <title>Extracting data from crawled content &mdash; Webarchive 1.0 documentation</title>
     
     <link rel="stylesheet" href="_static/nature.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -24,8 +24,8 @@
     <script type="text/javascript" src="_static/jquery.js"></script>
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
-    <link rel="top" title="Webarchiv 1.0 documentation" href="index.html" />
-    <link rel="next" title="Crawling Program (WGET)" href="wget.html" />
+    <link rel="top" title="Webarchive 1.0 documentation" href="index.html" />
+    <link rel="next" title="Logging" href="logger.html" />
     <link rel="prev" title="Filtering crawled content" href="filter.html" /> 
   </head>
   <body>
@@ -39,12 +39,12 @@
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
         <li class="right" >
-          <a href="wget.html" title="Crawling Program (WGET)"
+          <a href="logger.html" title="Logging"
              accesskey="N">next</a> |</li>
         <li class="right" >
           <a href="filter.html" title="Filtering crawled content"
              accesskey="P">previous</a> |</li>
-        <li><a href="index.html">Webarchiv 1.0 documentation</a> &raquo;</li> 
+        <li><a href="index.html">Webarchive 1.0 documentation</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -129,8 +129,8 @@ else an empty string will be returned</td>
   <p class="topless"><a href="filter.html"
                         title="previous chapter">Filtering crawled content</a></p>
   <h4>Next topic</h4>
-  <p class="topless"><a href="wget.html"
-                        title="next chapter">Crawling Program (WGET)</a></p>
+  <p class="topless"><a href="logger.html"
+                        title="next chapter">Logging</a></p>
   <h3>This Page</h3>
   <ul class="this-page-menu">
     <li><a href="_sources/extractor.txt"
@@ -163,16 +163,16 @@ else an empty string will be returned</td>
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
         <li class="right" >
-          <a href="wget.html" title="Crawling Program (WGET)"
+          <a href="logger.html" title="Logging"
              >next</a> |</li>
         <li class="right" >
           <a href="filter.html" title="Filtering crawled content"
              >previous</a> |</li>
-        <li><a href="index.html">Webarchiv 1.0 documentation</a> &raquo;</li> 
+        <li><a href="index.html">Webarchive 1.0 documentation</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
-        &copy; Copyright 2012, Christopher Pahl, Christoph Piechula.
+        &copy; Copyright 2012, Christopher Pahl, Christoph Piechula, Florian Bauer.
       Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.1.3.
     </div>
   </body>
