--- a/filter.html
+++ b/filter.html
@@ -7,7 +7,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Filtering crawled content &mdash; Webarchiv 1.0 documentation</title>
+    <title>Filtering crawled content &mdash; Webarchive 1.0 documentation</title>
     
     <link rel="stylesheet" href="_static/nature.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -24,7 +24,7 @@
     <script type="text/javascript" src="_static/jquery.js"></script>
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
-    <link rel="top" title="Webarchiv 1.0 documentation" href="index.html" />
+    <link rel="top" title="Webarchive 1.0 documentation" href="index.html" />
     <link rel="next" title="Extracting data from crawled content" href="extractor.html" />
     <link rel="prev" title="Managing crawl intervals" href="intervalmanager.html" /> 
   </head>
@@ -44,7 +44,7 @@
         <li class="right" >
           <a href="intervalmanager.html" title="Managing crawl intervals"
              accesskey="P">previous</a> |</li>
-        <li><a href="index.html">Webarchiv 1.0 documentation</a> &raquo;</li> 
+        <li><a href="index.html">Webarchive 1.0 documentation</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -193,11 +193,11 @@ or None to read the value from the cfg</td>
         <li class="right" >
           <a href="intervalmanager.html" title="Managing crawl intervals"
              >previous</a> |</li>
-        <li><a href="index.html">Webarchiv 1.0 documentation</a> &raquo;</li> 
+        <li><a href="index.html">Webarchive 1.0 documentation</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
-        &copy; Copyright 2012, Christopher Pahl, Christoph Piechula.
+        &copy; Copyright 2012, Christopher Pahl, Christoph Piechula, Florian Bauer.
       Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.1.3.
     </div>
   </body>
