--- a/wget.html
+++ b/wget.html
@@ -7,7 +7,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Crawling Program (WGET) &mdash; Webarchiv 1.0 documentation</title>
+    <title>Crawling Program (WGET) &mdash; Webarchive 1.0 documentation</title>
     
     <link rel="stylesheet" href="_static/nature.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -24,9 +24,9 @@
     <script type="text/javascript" src="_static/jquery.js"></script>
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
-    <link rel="top" title="Webarchiv 1.0 documentation" href="index.html" />
+    <link rel="top" title="Webarchive 1.0 documentation" href="index.html" />
     <link rel="next" title="Cleaning crawled content" href="cleaner.html" />
-    <link rel="prev" title="Extracting data from crawled content" href="extractor.html" /> 
+    <link rel="prev" title="Logging" href="logger.html" /> 
   </head>
   <body>
     <div class="related">
@@ -42,9 +42,9 @@
           <a href="cleaner.html" title="Cleaning crawled content"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="extractor.html" title="Extracting data from crawled content"
+          <a href="logger.html" title="Logging"
              accesskey="P">previous</a> |</li>
-        <li><a href="index.html">Webarchiv 1.0 documentation</a> &raquo;</li> 
+        <li><a href="index.html">Webarchive 1.0 documentation</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -123,8 +123,8 @@ They may replace options stated <strong>before</strong>. Use at your own risk.</
 </ul>
 
   <h4>Previous topic</h4>
-  <p class="topless"><a href="extractor.html"
-                        title="previous chapter">Extracting data from crawled content</a></p>
+  <p class="topless"><a href="logger.html"
+                        title="previous chapter">Logging</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="cleaner.html"
                         title="next chapter">Cleaning crawled content</a></p>
@@ -163,13 +163,13 @@ They may replace options stated <strong>before</strong>. Use at your own risk.</
           <a href="cleaner.html" title="Cleaning crawled content"
              >next</a> |</li>
         <li class="right" >
-          <a href="extractor.html" title="Extracting data from crawled content"
+          <a href="logger.html" title="Logging"
              >previous</a> |</li>
-        <li><a href="index.html">Webarchiv 1.0 documentation</a> &raquo;</li> 
+        <li><a href="index.html">Webarchive 1.0 documentation</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
-        &copy; Copyright 2012, Christopher Pahl, Christoph Piechula.
+        &copy; Copyright 2012, Christopher Pahl, Christoph Piechula, Florian Bauer.
       Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.1.3.
     </div>
   </body>
