--- a/xml2metadata.html
+++ b/xml2metadata.html
@@ -7,7 +7,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Translation between XML and internal Metadata &mdash; Webarchiv 1.0 documentation</title>
+    <title>Translation between XML and internal Metadata &mdash; Webarchive 1.0 documentation</title>
     
     <link rel="stylesheet" href="_static/nature.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -24,7 +24,7 @@
     <script type="text/javascript" src="_static/jquery.js"></script>
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
-    <link rel="top" title="Webarchiv 1.0 documentation" href="index.html" />
+    <link rel="top" title="Webarchive 1.0 documentation" href="index.html" />
     <link rel="next" title="Managing crawl intervals" href="intervalmanager.html" />
     <link rel="prev" title="Python to Java Interface (aka Javadapter)" href="javadapter.html" /> 
   </head>
@@ -44,7 +44,7 @@
         <li class="right" >
           <a href="javadapter.html" title="Python to Java Interface (aka Javadapter)"
              accesskey="P">previous</a> |</li>
-        <li><a href="index.html">Webarchiv 1.0 documentation</a> &raquo;</li> 
+        <li><a href="index.html">Webarchive 1.0 documentation</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -190,11 +190,11 @@
         <li class="right" >
           <a href="javadapter.html" title="Python to Java Interface (aka Javadapter)"
              >previous</a> |</li>
-        <li><a href="index.html">Webarchiv 1.0 documentation</a> &raquo;</li> 
+        <li><a href="index.html">Webarchive 1.0 documentation</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
-        &copy; Copyright 2012, Christopher Pahl, Christoph Piechula.
+        &copy; Copyright 2012, Christopher Pahl, Christoph Piechula, Florian Bauer.
       Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.1.3.
     </div>
   </body>
